# cubesatsim-aprs-parser

./: Dockerfile  Dockerfile.buttons  Dockerfile.gauges  Dockerfile.nginx  buttons.py  docker-bake.hcl  docker-compose.yml  gauges.py  main.py  pyproject.toml  rotation.html  run-buttons.sh  run-gauges.sh  run.sh  test_decode.py
.github/workflows/: build-and-push-buttons.yml  build-and-push-gauges.yml  build-and-push-parser.yml  build-and-push-visualisation.yml  build-and-push.yml
frontend/: index.html
mosquitto/: mosquitto.conf
