[project]
name = "aprs2mqtt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-servokit>=1.3.21",
    "adafruit-blinka>=8.62.0",
    "adafruit-circuitpython-ht16k33>=4.6.14",
    "ht16k33-python>=4.2.0",
    "rpi-gpio>=0.7.1",
    "smbus>=1.1.post2",
    "click>=8.2.1",
    "latloncalc>=1.5.6",
    "paho-mqtt>=2.1.0",
    "pytest>=8.3.5",
    "rpi-gpio>=0.7.1",
]
